# thot

./: README.md  WORKSPACE  shell.nix
cargo/: crates.bzl
cargo/remote/: BUILD.actix-connect-2.0.0.bazel  BUILD.actix-http-2.2.0.bazel  BUILD.actix-rt-2.0.2.bazel  BUILD.actix-tls-2.0.0.bazel  BUILD.actix-web-3.3.2.bazel  BUILD.actix-web-codegen-0.4.0.bazel  BUILD.adler-0.2.3.bazel  BUILD.atty-0.2.14.bazel  BUILD.awc-2.0.3.bazel  BUILD.backtrace-0.3.56.bazel  BUILD.brotli-sys-0.3.2.bazel  BUILD.cookie-0.14.3.bazel  BUILD.cpuid-bool-0.1.2.bazel  BUILD.flate2-1.0.20.bazel  BUILD.futures-0.3.13.bazel  BUILD.generic-array-0.14.4.bazel  BUILD.getrandom-0.1.16.bazel  BUILD.h2-0.2.7.bazel  BUILD.hostname-0.3.1.bazel  BUILD.iovec-0.1.4.bazel  BUILD.ipconfig-0.2.2.bazel  BUILD.miniz_oxide-0.4.3.bazel  BUILD.mio-0.6.23.bazel  BUILD.mio-0.7.9.bazel  BUILD.mio-uds-0.6.8.bazel  BUILD.net2-0.2.37.bazel  BUILD.once_cell-1.6.0.bazel  BUILD.parking_lot_core-0.8.3.bazel  BUILD.rand-0.7.3.bazel  BUILD.serde_json-1.0.62.bazel  BUILD.serde_urlencoded-0.7.0.bazel  BUILD.sha-1-0.9.4.bazel  BUILD.socket2-0.3.19.bazel  BUILD.stdweb-internal-macros-0.2.9.bazel  BUILD.thread_local-1.1.3.bazel  BUILD.time-0.2.25.bazel  BUILD.tokio-0.2.25.bazel  BUILD.tokio-1.2.0.bazel  BUILD.tracing-0.1.24.bazel  BUILD.tracing-futures-0.2.5.bazel  (+9 more)
web/actix-wrapper/: BUILD.bazel  Cargo.toml  Dockerfile
web/actix-wrapper/cargo/: BUILD.bazel
web/actix-wrapper/src/: main.rs
